<resources>
    <string name="app_name">Gamer</string>

    <!--  Inputs | Labels | Buttons -->
    <string name="input_suffix_Email">\@esprit.tn</string>
    <string name="input_email">Email</string>
    <string name="input_email_or_phone">Email/Phone</string>
    <string name="input_full_name">FullName</string>
    <string name="input_password">Password</string>
    <string name="input_confirm_password">Confirm Password</string>

    <string name="txt_or">OR</string>
    <string name="txt_forgot_password">Forgot Password</string>
    <string name="txt_otp_validation">Enter the code sent to you by Email or Mobile number</string>
    <string name="txt_reset_password">Reset Password</string>
    <string name="txt_no_reception">Didn\'t receive a verification code?</string>
    <string name="txt_forgot_password_desc">Please enter your registered email to reset your password</string>
    <string name="txt_reset_password_desc">Please enter your new password and confirm it.</string>
    <string name="txtGames">Games</string>
    <string name="txtMaterials">Materials</string>

    <string name="txt_category">Category</string>
    <string-array name="category">
        <item>PS5 Games</item>
        <item>PS4 Games</item>
        <item>PS3 Games</item>
        <item>Xbox Games</item>
        <item>PC Games</item>
    </string-array>

    <string name="btn_login">Login</string>
    <string name="btn_signup">Submit</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_verify">Verify</string>
    <string name="btn_sendSMS">Send SMS</string>
    <string name="btn_register_now">Don\'t have an account? <u>Register Now</u> </string>
    <string name="btn_resend_code"><u>Resend code</u></string>
    <string name="btn_terms_and_privacy">By registering you agree to our <u>Terms &amp; Conditions</u> and <u>Privacy Policy</u></string>
    <string name="btn_forgot_password">Forgot password ?</string>
    <string name="btn_remember_me">Remember Me</string>

    <string name="action_1">Show More</string>


    <!--  Menu | Fragments | Navigation -->
    <string name="item_home">Home</string>
    <string name="item_news">News</string>
    <string name="item_store">Store</string>
    <string name="item_profile">Profile</string>
    <string name="item_notification">Notification</string>
    <string name="item_favourite">Favourite</string>

    <!--  ErrorsMessages  -->
    <string name="msg_must_not_be_empty">Must not be empty!</string>
    <string name="msg_check_your_email">Must be a valid email!</string>
    <string name="msg_check_your_characters">Must be a at least 6 characters!</string>
    <string name="msg_check_your_confirm_Password">Must be the same password!</string>
    <string name="msg_error_inputs">You Have some errors in your inputs!</string>
    <string name="msg_error_wrong_code">Wrong code!</string>

    <!--  TEXTS  -->
    <string name="title1">Top 10 Gaming News of the day</string>
    <string name="title2">The Legend of Zelda</string>
    <string name="title3">Red Dead Redemption 2</string>
    <string name="title4">God of War Ragnarok</string>
    <string name="title5">Diablo 4</string>
    <string name="title6">Fc24</string>
    <string name="title7">Counter Strike</string>
    <string name="title8">League Of Legends </string>

    <string name="description1">Here\'s the latest news from the gaming and e-sports world.</string>
    <string name="description2">Finally, the successor to Breath of the Wild arrives on Nintendo Switch. Waited for several years.</string>
    <string name="description3">Bonus rewards for some of the west’s toughest jobs</string>
    <string name="description4">Confusing God of War Ragnarok Glitch Brings Brok of the Huldra brothers Back to Life</string>
    <string name="description5">Diablo 4 continues to walk back changes from its fiendishly unpopular 1.1 patch, boosting XP gain on World Tiers 3 and 4</string>
    <string name="description6">EA FC 24 Trailblazers Team 2 released: On October 20, 2023, EA FC 24 Trailblazers Team 2 was released with another wave of special Ultimate Team cards replacing the ones from Team 1 in the packs</string>
    <string name="description7">Counter-Strike 2 is now available and free to play. The game was released on September 27, 2023, and is available on PC via Steam.</string>
    <string name="description8">League of Legends Worlds 2023 is underway! The biggest League of Legends tournament of the year is currently happening, with teams from all over the world competing for the championship title</string>

    <string name="Content_description_app_logo">App Logo</string>
    <string name="Content_description_facebook_button">Facebook Login</string>
    <string name="Content_description_google_button">Google Login</string>

    <string name="msg_coming_soon">Coming soon :)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>