<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="250dp"
        android:layout_height="37dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="76dp"
        android:text="Forget Paswword"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="382dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="148dp"
        android:text="@string/txt_forgot_password_desc"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/EmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_email"
        android:layout_margin="20dp"
        app:startIconDrawable="@drawable/email"
        app:errorEnabled="true"
        app:suffixText="@string/input_suffix_Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:backgroundTint="@color/colorPrimary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/submit"
        android:layout_width="364dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/Primary"
        android:text="Submit"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EmailAddress" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit"
        android:layout_marginTop="40dp"
        android:textColor="@color/Primary"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/sendSms"
        android:layout_width="364dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/Primary"
        android:text="Send Sms"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>